Remade DB and models corrected
